# AP-intake

./: .env.example  .env.production.template  .env.test  .gitignore  AP_AR_TRANSFORMATION_SUMMARY.md  AR_IMPLEMENTATION_SUMMARY.md  CELERY_FILES_REFERENCE.md  CELERY_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DATABASE_SETUP.md  Dockerfile  Dockerfile.prod  ENHANCED_EXTRACTION_VALIDATION_SYSTEM.md  EXCEPTION_INTEGRATION_EXAMPLE.md  EXCEPTION_MANAGEMENT_README.md  INGESTION_SYSTEM.md  INVOICIFY_IMPLEMENTATION_SUMMARY.md  LANGGRAPH_WORKFLOW_FIXES.md  N8N_INTEGRATION_README.md  OPENROUTER_INTEGRATION_SUMMARY.md  PRODUCTION_EMAIL_SETUP.py  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_WORKFLOW_EMAIL_QUICKBOOKS.md  README.md  RELATIONSHIP_FIX_SUMMARY.md  SCHEMA_SYSTEM_README.md  SLOS_README.md  TCO_PAYBACK_ANALYSIS.md  TODO_ROUTES.md  UPLOAD_FIX_SUMMARY.md  WORKING_CAPITAL_ANALYTICS_IMPLEMENTATION.md  advanced_api_test.py  alembic.ini  comprehensive_api_test.py  dashboard_back.json  docker-compose.minimal.yml  docker-compose.prod.yml  docker-compose.yml  enhanced_extraction_validation_test_report.json  focused_api_test.py  (+20 more)
.claude/: settings.local.json
app/: __init__.py  main.py
docs/: ACCEPTANCE_CRITERIA_TEST_REPORT.md  CELERY_SETUP.md  CFO_DIGEST_IMPLEMENTATION_SUMMARY.md  CFO_DIGEST_QUICK_REFERENCE.md  COMPREHENSIVE_AP_AR_E2E_TEST_REPORT.md  COMPREHENSIVE_SECURITY_COMPLIANCE_REPORT.md  COMPREHENSIVE_VALIDATION_ANALYSIS_FINAL_REPORT.md  EXCEPTION_MANAGEMENT.md  INTEGRATION_RELIABILITY_TESTING_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  MANUAL_UI_TEST_SCRIPT.js  N8N_INTEGRATION_GUIDE.md  OBSERVABILITY.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PRODUCTION_READINESS_REPORT.md  QUICKBOOKS_INTEGRATION.md  RBAC_IMPLEMENTATION_SUMMARY.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_ASSESSMENT_REPORT.md  SECURITY_COMPLIANCE_EXECUTIVE_SUMMARY.md  SECURITY_COMPLIANCE_TEST_REPORT.md  SWAPPABLE_INTEGRATION_GUIDE.md  TEST_DEMO_README.md  UI_BACKEND_INTEGRATION_REPORT.md  UI_HITL_TESTING_REPORT.md  UI_TESTING_EXECUTION_SUMMARY.md  UX_TESTING_ANALYSIS_REPORT.md  VALIDATION_FRAMEWORK_ANALYSIS_REPORT.md  export_service_documentation.md  focused_ap_ar_e2e_report_20251110_183320.json  focused_ap_ar_e2e_report_20251113_110049.json  focused_validation_diagnostic_report.txt  frontend-screenshot.html  idempotency_staging_implementation.md  n8n-workflows-for-import.md  package.json  service_status_report.json  ux_test_playwright.js  (+1 more)
examples/: sample_invoice.txt  swappable_integration_demo.py
kubernetes/: api-deployment.yaml  configmap.yaml  hpa.yaml  namespace.yaml  secret.yaml  worker-deployment.yaml
migrations/: env.py
monitoring/: alerts.yml  prometheus.yml  slo-rules.yml
nginx/: nginx.conf
runbooks/: dlq_recovery.yml  emergency_rollback.yml
scripts/: README.md  README_invoice_generator.md  acceptance_criteria_test_suite.py  automated_security_validator.py  backup.sh  backup_database.sh  batch_move_files.py  check_schema_drift.py  compare_schemas.py  create_test_invoice.py  database_performance_dashboard.py  demo_report_generator.py  deploy.sh  final_cleanup.py  fix_integrations.py  fix_schema.py  focused_security_audit.py  generate_schema_docs.py  health-check.sh  init-db.sql  init_database.sql  init_export_templates.py  optimize_database.py  performance_validation.py  production_demo.py  quick_celery_test.py  run_tests.py  security-audit.sh  security_fix.py  seed_analytics_data.py  seed_data.py  storage_manager.py  ux_test_comprehensive.py  validate_and_demo.py  validate_database.py  validate_migrations.py
test_reports/: upload_api_test_report_20251107_180621.txt  upload_api_test_report_fixed_20251107_180824.txt
tests/: api_integration_test.py  comprehensive_ap_ar_e2e_test_suite.py  conftest.py  (+38 more)
(+390 files in other folders)
